# InferCore

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum
.github/profile/: README.md
.github/workflows/: ci.yml
api/: openapi.yaml
cmd/infercore/: main.go
configs/: infercore.example.yaml
deploy/prometheus/: .env.example  README.md  docker-compose.yml  docker-entrypoint.sh  prometheus.template.yml  verify-local.sh
docs/: architecture-one-pager.md  backend-adapters.md  extending-retrieval-adapters.md  langchain-integration.md  load-testing.md  observability.md  retrieval-adapters.md  streaming-and-fallback.md
examples/: queries.json
examples/kb/: sample.md
internal/adapters/: conformance_test.go  factory.go
internal/config/: config.go  config_test.go  env_expand.go
internal/cost/: simple_engine.go
internal/eval/: eval.go  eval_test.go  ledger_export.go
internal/execution/: steps.go
internal/inferexec/: budget.go  ledger.go  orchestrator.go  plan.go  plan_test.go  result.go
internal/interfaces/: interfaces.go
internal/pipelines/: registry.go
internal/policy/: basic_engine.go  basic_engine_test.go
internal/reliability/: manager.go  manager_test.go
internal/replay/: replay.go  replay_test.go
internal/requests/: factory.go  memory.go  models.go  postgres.go  sqlite.go  store.go
internal/retrieval/: build.go  common.go  filekb.go  http_kb.go  http_kb_test.go  meilisearch_kb.go  merge.go  (+4 more)
sdk/python/: README.md  pyproject.toml
sdk/python/infercore/: __init__.py  client.py
sdk/python/tests/: test_client.py
(+16 files in other folders)
