[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infercore-client"
version = "0.1.0"
description = "Minimal HTTP client for InferCore (POST /infer)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.28",
]
license = { text = "Apache-2.0" }

[tool.hatch.build.targets.wheel]
packages = ["infercore"]
